--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/terms-of-service">Terms Of Service</a></li>
+                <li><a href="/privacy-policy">Privacy Policy</a></li>
+                <li><a href="https://cloud.bruvland.com" target="_blank">Cloud</a></li>
+                <li><a href="https://vps2.bruvland.com" target="_blank">Email manager</a></li>
+                <li><a href="https://vps2.bruvland.com/SOGo" target="_blank">WebMail</a></li>
+                <li><a href="https://panel.bruvland.com" target="_blank">Panel</a></li>
+            </ul>
+        </nav>
+    </header>
     <img class="logo" src="/assets/images/logo-v2.png" alt="Logo">
     <div class="content">
         <h1>BruvLand</h1>
